--- a/company.html
+++ b/company.html
@@ -169,7 +169,7 @@
                     <input type="email" placeholder="Email" name="email">
                 </div>
                 <div>
-                    <textarea name="message" id="message" placeholder="E-Mail" cols="30" rows="10"></textarea>
+                    <textarea name="message" id="message" placeholder="Messages" cols="30" rows="10"></textarea>
                 </div>
                 <button class="btn-submit">Send message</button>
             </form>
